Fixed horizontal alignments on pages

--- a/Mini_Project/public/style.css
+++ b/Mini_Project/public/style.css
@@ -57,3 +57,7 @@ h1.articlehead{
 	width: 400px;
 	height: auto;
 }
+.h1edit{
+	margin-top: 10px;
+	text-align: center;
+}
